# caffe2trt

./: .gitignore  CMakeLists.txt  README.md
include/: base_types.h  error_check.h
include/trt/: batch_stream.h  calibrator.h  net_operator.h  trt_logger.h
include/trt/parsers/caffe/: binaryProtoBlob.h  blobNameToTensor.h  caffeMacros.h
include/trt/parsers/caffe/caffeParser/: caffeParser.h  readProto.h
include/trt/parsers/caffe/caffeParser/opParsers/: opParsers.h
include/trt/parsers/caffe/caffeWeightFactory/: caffeWeightFactory.h  weightType.h
include/trt/parsers/caffe/proto/: trtcaffe.pb.h
include/trt/parsers/common/: ieee_half.h  parserUtils.h
include/trt/plugin/: plugin.h
include/trt/plugin/instanceNormalizationPlugin/: instanceNormalizationPlugin.h
include/trt/plugin/slicePlugin/: slicePlugin.h
include/utils/: color.h  crop.h  imdecode.h  permute.h  resize.h
models/: resnet50_ibn_a-d9d0bb7b_opt.prototxt
samples/: CMakeLists.txt  sample_ibn.cpp  sample_ibn_img.cpp  sample_ibn_opencv.cpp  sample_ibn_raw.cpp  sample_inference.cpp
scirpts/: build_model.sh  gen_trtcaffe_proto.sh
src/: CMakeLists.txt
src/trt/: batch_stream.cpp  calibrator.cpp  net_operator.cpp
src/trt/parsers/caffe/: NvCaffeParser.cpp
src/trt/parsers/caffe/caffeParser/: caffeParser.cpp
src/trt/parsers/caffe/caffeParser/opParsers/: parseAbsVal.cpp  parseBNLL.cpp  parseBatchNorm.cpp  parseClip.cpp  parseConcat.cpp  parseConv.cpp  parseCrop.cpp  parseDeconv.cpp  parseELU.cpp  parseEltwise.cpp  parseInnerProduct.cpp  parseInstanceNorm.cpp  parseLRN.cpp  parsePReLU.cpp  parsePermute.cpp  parsePooling.cpp  parsePower.cpp  parseReLU.cpp  parseReduction.cpp  parseReshape.cpp  parseScale.cpp  parseSigmoid.cpp  parseSoftMax.cpp  parseTanH.cpp
src/trt/parsers/caffe/caffeWeightFactory/: caffeWeightFactory.cpp
src/trt/parsers/caffe/proto/: trtcaffe.pb.cc  trtcaffe.proto
src/trt/plugin/: InferPlugin.cpp
src/trt/plugin/instanceNormalizationPlugin/: instanceNormalizationPlugin.cpp
src/trt/plugin/slicePlugin/: slicePlugin.cpp  slicePlugin.cu
src/utils/: color.cu  crop.cu  imdecode.cpp  permute.cu  resize.cu
tools/: CMakeLists.txt  bin2float.py  caffe2trt.cpp  gen_calibration_data.py
